@@ -52,7 +52,7 @@ import Distribution.Simple.Setup
 import Distribution.Simple.BuildTarget
          ( BuildTarget(..), readBuildTargets )
 import Distribution.Simple.PreProcess
-         ( preprocessComponent, PPSuffixHandler )
+         ( preprocessComponent, preprocessExtras, PPSuffixHandler )
 import Distribution.Simple.LocalBuildInfo
          ( LocalBuildInfo(compiler, buildDir, withPackageDB, withPrograms, pkgKey)
          , Component(..), componentName, getComponent, componentBuildInfo
@@ -79,6 +79,7 @@ import Distribution.Text
          ( display )
 
 import qualified Data.Map as Map
+import qualified Data.Set as Set
 import Data.Maybe
          ( maybeToList )
 import Data.Either
@@ -197,8 +198,11 @@ buildComponent :: Verbosity
 buildComponent verbosity numJobs pkg_descr lbi suffixes
                comp@(CLib lib) clbi distPref = do
     preprocessComponent pkg_descr comp lbi False verbosity suffixes
+    extras <- preprocessExtras comp lbi
     info verbosity "Building library..."
-    buildLib verbosity numJobs pkg_descr lbi lib clbi
+    let libbi = libBuildInfo lib
+        lib' = lib { libBuildInfo = addExtraCSources libbi extras }
+    buildLib verbosity numJobs pkg_descr lbi lib' clbi
 
     -- Register the library in-place, so exes can depend
     -- on internally defined libraries.
@@ -206,18 +210,20 @@ buildComponent verbosity numJobs pkg_descr lbi suffixes
     let -- The in place registration uses the "-inplace" suffix, not an ABI hash
         ipkgid           = inplacePackageId (packageId installedPkgInfo)
         installedPkgInfo = inplaceInstalledPackageInfo pwd distPref pkg_descr
-                                                       ipkgid lib lbi clbi
+                                                       ipkgid lib' lbi clbi
 
     registerPackage verbosity
       installedPkgInfo pkg_descr lbi True -- True meaning in place
       (withPackageDB lbi)
 
-
 buildComponent verbosity numJobs pkg_descr lbi suffixes
                comp@(CExe exe) clbi _ = do
     preprocessComponent pkg_descr comp lbi False verbosity suffixes
+    extras <- preprocessExtras comp lbi
     info verbosity $ "Building executable " ++ exeName exe ++ "..."
-    buildExe verbosity numJobs pkg_descr lbi exe clbi
+    let ebi = buildInfo exe
+        exe' = exe { buildInfo = addExtraCSources ebi extras }
+    buildExe verbosity numJobs pkg_descr lbi exe' clbi
 
 
 buildComponent verbosity numJobs pkg_descr lbi suffixes
@@ -225,8 +231,11 @@ buildComponent verbosity numJobs pkg_descr lbi suffixes
                clbi _distPref = do
     let exe = testSuiteExeV10AsExe test
     preprocessComponent pkg_descr comp lbi False verbosity suffixes
+    extras <- preprocessExtras comp lbi
     info verbosity $ "Building test suite " ++ testName test ++ "..."
-    buildExe verbosity numJobs pkg_descr lbi exe clbi
+    let ebi = buildInfo exe
+        exe' = exe { buildInfo = addExtraCSources ebi extras }
+    buildExe verbosity numJobs pkg_descr lbi exe' clbi
 
 
 buildComponent verbosity numJobs pkg_descr lbi0 suffixes
@@ -242,10 +251,13 @@ buildComponent verbosity numJobs pkg_descr lbi0 suffixes
     let (pkg, lib, libClbi, lbi, ipi, exe, exeClbi) =
           testSuiteLibV09AsLibAndExe pkg_descr test clbi lbi0 distPref pwd
     preprocessComponent pkg_descr comp lbi False verbosity suffixes
+    extras <- preprocessExtras comp lbi
     info verbosity $ "Building test suite " ++ testName test ++ "..."
     buildLib verbosity numJobs pkg lbi lib libClbi
     registerPackage verbosity ipi pkg lbi True $ withPackageDB lbi
-    buildExe verbosity numJobs pkg_descr lbi exe exeClbi
+    let ebi = buildInfo exe
+        exe' = exe { buildInfo = addExtraCSources ebi extras }
+    buildExe verbosity numJobs pkg_descr lbi exe' exeClbi
 
 
 buildComponent _ _ _ _ _
@@ -259,14 +271,26 @@ buildComponent verbosity numJobs pkg_descr lbi suffixes
                clbi _ = do
     let (exe, exeClbi) = benchmarkExeV10asExe bm clbi
     preprocessComponent pkg_descr comp lbi False verbosity suffixes
+    extras <- preprocessExtras comp lbi
     info verbosity $ "Building benchmark " ++ benchmarkName bm ++ "..."
-    buildExe verbosity numJobs pkg_descr lbi exe exeClbi
+    let ebi = buildInfo exe
+        exe' = exe { buildInfo = addExtraCSources ebi extras }
+    buildExe verbosity numJobs pkg_descr lbi exe' exeClbi
 
 
 buildComponent _ _ _ _ _
                (CBench Benchmark { benchmarkInterface = BenchmarkUnsupported tt })
                _ _ =
     die $ "No support for building benchmark type " ++ display tt
+
+
+-- | Add extra C sources generated by preprocessing to build
+-- information.
+addExtraCSources :: BuildInfo -> [FilePath] -> BuildInfo
+addExtraCSources bi extras = bi { cSources = new }
+  where new = Set.toList $ old `Set.union` exs
+        old = Set.fromList $ cSources bi
+        exs = Set.fromList extras
 
 
 replComponent :: Verbosity
@@ -280,12 +304,18 @@ replComponent :: Verbosity
 replComponent verbosity pkg_descr lbi suffixes
                comp@(CLib lib) clbi _ = do
     preprocessComponent pkg_descr comp lbi False verbosity suffixes
-    replLib verbosity pkg_descr lbi lib clbi
+    extras <- preprocessExtras comp lbi
+    let libbi = libBuildInfo lib
+        lib' = lib { libBuildInfo = libbi { cSources = cSources libbi ++ extras } }
+    replLib verbosity pkg_descr lbi lib' clbi
 
 replComponent verbosity pkg_descr lbi suffixes
                comp@(CExe exe) clbi _ = do
     preprocessComponent pkg_descr comp lbi False verbosity suffixes
-    replExe verbosity pkg_descr lbi exe clbi
+    extras <- preprocessExtras comp lbi
+    let ebi = buildInfo exe
+        exe' = exe { buildInfo = ebi { cSources = cSources ebi ++ extras } }
+    replExe verbosity pkg_descr lbi exe' clbi
 
 
 replComponent verbosity pkg_descr lbi suffixes
@@ -293,7 +323,10 @@ replComponent verbosity pkg_descr lbi suffixes
                clbi _distPref = do
     let exe = testSuiteExeV10AsExe test
     preprocessComponent pkg_descr comp lbi False verbosity suffixes
-    replExe verbosity pkg_descr lbi exe clbi
+    extras <- preprocessExtras comp lbi
+    let ebi = buildInfo exe
+        exe' = exe { buildInfo = ebi { cSources = cSources ebi ++ extras } }
+    replExe verbosity pkg_descr lbi exe' clbi
 
 
 replComponent verbosity pkg_descr lbi0 suffixes
@@ -304,7 +337,10 @@ replComponent verbosity pkg_descr lbi0 suffixes
     let (pkg, lib, libClbi, lbi, _, _, _) =
           testSuiteLibV09AsLibAndExe pkg_descr test clbi lbi0 distPref pwd
     preprocessComponent pkg_descr comp lbi False verbosity suffixes
-    replLib verbosity pkg lbi lib libClbi
+    extras <- preprocessExtras comp lbi
+    let libbi = libBuildInfo lib
+        lib' = lib { libBuildInfo = libbi { cSources = cSources libbi ++ extras } }
+    replLib verbosity pkg lbi lib' libClbi
 
 
 replComponent _ _ _ _
@@ -318,7 +354,10 @@ replComponent verbosity pkg_descr lbi suffixes
                clbi _ = do
     let (exe, exeClbi) = benchmarkExeV10asExe bm clbi
     preprocessComponent pkg_descr comp lbi False verbosity suffixes
-    replExe verbosity pkg_descr lbi exe exeClbi
+    extras <- preprocessExtras comp lbi
+    let ebi = buildInfo exe
+        exe' = exe { buildInfo = ebi { cSources = cSources ebi ++ extras } }
+    replExe verbosity pkg_descr lbi exe' exeClbi
 
 
 replComponent _ _ _ _
