@@ -705,8 +705,12 @@ simple build infrastructure understands the extensions:
 * `.x` ([alex][])
 * `.cpphs` ([cpphs][])
 
-When building, Cabal will automatically run the appropriate preprocessor
-and compile the Haskell module it produces.
+When building, Cabal will automatically run the appropriate
+preprocessor and compile the Haskell module it produces.  For the
+`c2hs` and `hsc2hs` preprocessors, Cabal will also automatically add,
+compile and link any C sources generated by the preprocessor (produced
+by `hsc2hs`'s `#def` feature or `c2hs`'s auto-generated wrapper
+functions).
 
 Some fields take lists of values, which are optionally separated by commas,
 except for the `build-depends` field, where the commas are mandatory.
